--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.test {
+  border: 1px solid red;
+}
+
+.cc {
+  width: 1400px;
+  max-width: 80%;
+  margin: auto;
+}
